--- a/vercel.json
+++ b/vercel.json
@@ -7,8 +7,8 @@
   ],
   "routes": [
     {
-      "src": "/(.*)",
-      "dest": "api/main.py"
+      "src": "/early-access",
+      "dest": "/api/main.py"
     }
   ]
 }
